top recording fix

--- a/TODO
+++ b/TODO
@@ -1,17 +1,21 @@
 Mihai on vacation after August 21st, so discuss on 18th (Monday)
 back on 9th-10th
 
-- get: %PPI, IPI, max 100ms, peak-to-peak amplitude (50 ms), max peak-to-trough (200 ms), first peak (50 ms), RMS (???ms)
-
-- shorten link to raw data in thesis
-
-- pubmed search stancu myelin for paper for ethics statement
-
-- background level comparable to r420h mice maybe (for thesis writing) real cba comparison with littermates
 
 - check if the strength and everything changes after 2nd mouse onwards or in what way it decreases (or RT increases) 
 - do literature search and investigate further
 
+- AUC seems to be the most consistent strength metric across date and sex
+
+- fix missing citations
+
+- summarize results
+
+- connect paragraphs
+
+- check and rewrite introduction
+
+- THREE categories: reaction time, strength and the decay fit
 
 
 After we're done:
