--- a/percentPPI_Tester.ipynb
+++ b/percentPPI_Tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "id": "95349ed7",
    "metadata": {},
    "outputs": [
@@ -40,16 +40,16 @@
     "    \"gap_duration_50\":  50,\n",
     "    \"gap_duration_8\":   8,\n",
     "    \"offset_ASR\":       None,\n",
-    "    \"offset_PPI_10\":    10,\n",
-    "    \"offset_PPI_12\":    12,\n",
-    "    \"offset_PPI_14\":    14,\n",
-    "    \"offset_PPI_16\":    16,\n",
-    "    \"offset_PPI_18\":    18,\n",
-    "    \"offset_PPI_20\":    20,\n",
-    "    \"offset_PPI_4\":     4,\n",
-    "    \"offset_PPI_6\":     6,\n",
-    "    \"offset_PPI_8\":     8,\n",
-    "    \"offset_PPI_50\":    50,\n",
+    "    \"offset_PPI_10\":    None,\n",
+    "    \"offset_PPI_12\":    None,\n",
+    "    \"offset_PPI_14\":    None,\n",
+    "    \"offset_PPI_16\":    None,\n",
+    "    \"offset_PPI_18\":    None,\n",
+    "    \"offset_PPI_20\":    None,\n",
+    "    \"offset_PPI_4\":     None,\n",
+    "    \"offset_PPI_6\":     None,\n",
+    "    \"offset_PPI_8\":     None,\n",
+    "    \"offset_PPI_50\":    None,\n",
     "    \"tone_in_noise\":    50\n",
     "\n",
     "}\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "id": "7d76bf21",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "id": "9936bc9f",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "id": "287783ad",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
+   "id": "1962d5e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "%PPI for offset_PPI (averaged per experiment, date, sex):\n",
+      "('offset_PPI_10', 'April16', 'female'): 23.12\n",
+      "('offset_PPI_10', 'April16', 'male'): 16.29\n",
+      "('offset_PPI_10', 'June26', 'female'): 14.84\n",
+      "('offset_PPI_10', 'June26', 'male'): 17.58\n",
+      "('offset_PPI_10', 'May20', 'female'): -1.27\n",
+      "('offset_PPI_10', 'May20', 'male'): 11.62\n",
+      "('offset_PPI_12', 'April16', 'female'): 21.85\n",
+      "('offset_PPI_12', 'April16', 'male'): 12.03\n",
+      "('offset_PPI_12', 'June26', 'female'): 7.61\n",
+      "('offset_PPI_12', 'June26', 'male'): 18.82\n",
+      "('offset_PPI_12', 'May20', 'female'): 8.89\n",
+      "('offset_PPI_12', 'May20', 'male'): 13.37\n",
+      "('offset_PPI_14', 'April16', 'female'): 18.29\n",
+      "('offset_PPI_14', 'April16', 'male'): -12.60\n",
+      "('offset_PPI_14', 'June26', 'female'): 10.57\n",
+      "('offset_PPI_14', 'June26', 'male'): 21.73\n",
+      "('offset_PPI_14', 'May20', 'female'): 6.41\n",
+      "('offset_PPI_14', 'May20', 'male'): 10.64\n",
+      "('offset_PPI_16', 'April16', 'female'): 28.28\n",
+      "('offset_PPI_16', 'April16', 'male'): 9.34\n",
+      "('offset_PPI_16', 'June26', 'female'): 18.23\n",
+      "('offset_PPI_16', 'June26', 'male'): 10.50\n",
+      "('offset_PPI_16', 'May20', 'female'): -2.94\n",
+      "('offset_PPI_16', 'May20', 'male'): 16.78\n",
+      "('offset_PPI_18', 'April16', 'female'): 21.40\n",
+      "('offset_PPI_18', 'April16', 'male'): 5.88\n",
+      "('offset_PPI_18', 'June26', 'female'): 6.44\n",
+      "('offset_PPI_18', 'June26', 'male'): 8.43\n",
+      "('offset_PPI_18', 'May20', 'female'): 15.83\n",
+      "('offset_PPI_18', 'May20', 'male'): 22.50\n",
+      "('offset_PPI_20', 'April16', 'female'): 18.68\n",
+      "('offset_PPI_20', 'April16', 'male'): 16.30\n",
+      "('offset_PPI_20', 'June26', 'female'): 14.50\n",
+      "('offset_PPI_20', 'June26', 'male'): 12.06\n",
+      "('offset_PPI_20', 'May20', 'female'): 4.24\n",
+      "('offset_PPI_20', 'May20', 'male'): 19.51\n",
+      "('offset_PPI_4', 'April16', 'female'): 17.44\n",
+      "('offset_PPI_4', 'April16', 'male'): 17.35\n",
+      "('offset_PPI_4', 'June26', 'female'): 11.28\n",
+      "('offset_PPI_4', 'June26', 'male'): 5.86\n",
+      "('offset_PPI_4', 'May20', 'female'): -7.70\n",
+      "('offset_PPI_4', 'May20', 'male'): 20.24\n",
+      "('offset_PPI_50', 'April16', 'female'): 15.33\n",
+      "('offset_PPI_50', 'April16', 'male'): 13.18\n",
+      "('offset_PPI_50', 'June26', 'female'): 6.22\n",
+      "('offset_PPI_50', 'June26', 'male'): 11.44\n",
+      "('offset_PPI_50', 'May20', 'female'): 0.17\n",
+      "('offset_PPI_50', 'May20', 'male'): 12.89\n",
+      "('offset_PPI_6', 'April16', 'female'): 18.54\n",
+      "('offset_PPI_6', 'April16', 'male'): 9.52\n",
+      "('offset_PPI_6', 'June26', 'female'): 24.17\n",
+      "('offset_PPI_6', 'June26', 'male'): 5.48\n",
+      "('offset_PPI_6', 'May20', 'female'): 11.06\n",
+      "('offset_PPI_6', 'May20', 'male'): 10.15\n",
+      "('offset_PPI_8', 'April16', 'female'): 20.61\n",
+      "('offset_PPI_8', 'April16', 'male'): 21.19\n",
+      "('offset_PPI_8', 'June26', 'female'): 22.60\n",
+      "('offset_PPI_8', 'June26', 'male'): 13.85\n",
+      "('offset_PPI_8', 'May20', 'female'): 8.45\n",
+      "('offset_PPI_8', 'May20', 'male'): 15.84\n",
+      "\n",
+      "%PPI for gap_duration (averaged per experiment, date, sex):\n",
+      "('gap_duration_10', 'April16', 'female'): 7.39\n",
+      "('gap_duration_10', 'April16', 'male'): 4.01\n",
+      "('gap_duration_10', 'June26', 'female'): 1.30\n",
+      "('gap_duration_10', 'June26', 'male'): 8.15\n",
+      "('gap_duration_10', 'May20', 'female'): -4.72\n",
+      "('gap_duration_10', 'May20', 'male'): 12.46\n",
+      "('gap_duration_20', 'April16', 'female'): 4.01\n",
+      "('gap_duration_20', 'April16', 'male'): 8.33\n",
+      "('gap_duration_20', 'June26', 'female'): 4.89\n",
+      "('gap_duration_20', 'June26', 'male'): 4.77\n",
+      "('gap_duration_20', 'May20', 'female'): -10.54\n",
+      "('gap_duration_20', 'May20', 'male'): 20.47\n",
+      "('gap_duration_4', 'April16', 'female'): 13.18\n",
+      "('gap_duration_4', 'April16', 'male'): -7.50\n",
+      "('gap_duration_4', 'June26', 'female'): -0.02\n",
+      "('gap_duration_4', 'June26', 'male'): 2.00\n",
+      "('gap_duration_4', 'May20', 'female'): -20.93\n",
+      "('gap_duration_4', 'May20', 'male'): 2.67\n",
+      "('gap_duration_50', 'April16', 'female'): 11.26\n",
+      "('gap_duration_50', 'April16', 'male'): -1.51\n",
+      "('gap_duration_50', 'June26', 'female'): 3.40\n",
+      "('gap_duration_50', 'June26', 'male'): 8.71\n",
+      "('gap_duration_50', 'May20', 'female'): -7.34\n",
+      "('gap_duration_50', 'May20', 'male'): 1.51\n",
+      "('gap_duration_8', 'April16', 'female'): 23.02\n",
+      "('gap_duration_8', 'April16', 'male'): -6.16\n",
+      "('gap_duration_8', 'June26', 'female'): 8.43\n",
+      "('gap_duration_8', 'June26', 'male'): 3.09\n",
+      "('gap_duration_8', 'May20', 'female'): -4.96\n",
+      "('gap_duration_8', 'May20', 'male'): 3.61\n",
+      "\n",
+      "%PPI for tone_in_noise (averaged per experiment, date, sex):\n",
+      "('April16', 'female'): 31.86\n",
+      "('April16', 'male'): 18.82\n",
+      "('June26', 'female'): 42.30\n",
+      "('June26', 'male'): 27.26\n",
+      "('May20', 'female'): 16.49\n",
+      "('May20', 'male'): 26.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_percent_ppi(ctrl_dict, exp_dict, label):\n",
+    "    # Average %PPI per (experiment, date, sex) or (date, sex)\n",
+    "    percent_ppi = {}\n",
+    "    values_by_group = {}\n",
+    "    for key, PPS in exp_dict.items():\n",
+    "        if isinstance(key, tuple) and len(key) == 2:\n",
+    "            # (date, sex)\n",
+    "            group_key = key\n",
+    "            date, sex = key\n",
+    "        elif isinstance(key, tuple) and len(key) == 3:\n",
+    "            # (experiment, date, sex)\n",
+    "            group_key = key\n",
+    "            _, date, sex = key\n",
+    "        else:\n",
+    "            continue\n",
+    "        S = ctrl_dict.get((date, sex), np.nan)\n",
+    "        if pd.notna(S) and pd.notna(PPS) and S != 0:\n",
+    "            ppi_val = 100 * (S - PPS) / S\n",
+    "        else:\n",
+    "            ppi_val = np.nan\n",
+    "        if group_key not in values_by_group:\n",
+    "            values_by_group[group_key] = []\n",
+    "        values_by_group[group_key].append(ppi_val)\n",
+    "    # Average over all values for each group\n",
+    "    for group_key, vlist in values_by_group.items():\n",
+    "        vlist = [v for v in vlist if pd.notna(v)]\n",
+    "        percent_ppi[group_key] = np.nanmean(vlist) if vlist else np.nan\n",
+    "    print(f\"\\n%PPI for {label} (averaged per experiment, date, sex):\")\n",
+    "    for k, v in percent_ppi.items():\n",
+    "        print(f\"{k}: {v:.2f}\" if pd.notna(v) else f\"{k}: NaN\")\n",
+    "    return percent_ppi\n",
+    "\n",
+    "\n",
+    "ppi_offset = calc_percent_ppi(ctrl_dict, offset_dict, \"offset_PPI\")\n",
+    "ppi_gap = calc_percent_ppi(ctrl_dict, gap_dict, \"gap_duration\")\n",
+    "ppi_ttn = calc_percent_ppi(ctrl_dict, ttn_dict, \"tone_in_noise\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "e1d97e5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average %PPI across dates for offset_PPI:\n",
+      "PPI count: 56\n",
+      "female: 12.77\n",
+      "male: 12.93\n",
+      "mean: 12.85\n",
+      "PPF count: 4\n",
+      "PPF mean: -6.13\n",
+      "\n",
+      "Average %PPI across dates for gap_duration:\n",
+      "PPI count: 21\n",
+      "female: 1.89\n",
+      "male: 4.31\n",
+      "mean: 3.10\n",
+      "PPF count: 9\n",
+      "PPF mean: -7.08\n",
+      "\n",
+      "Average %PPI across dates for tone_in_noise:\n",
+      "PPI count: 6\n",
+      "female: 30.22\n",
+      "male: 24.18\n",
+      "mean: 27.20\n",
+      "PPF count: 0\n",
+      "PPF mean: NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "def average_ppi_by_sex(ppi_dict, label):\n",
+    "    # Collect values by sex\n",
+    "    \n",
+    "    print(f\"\\nAverage %PPI across dates for {label}:\")\n",
+    "    PPF_count = 0\n",
+    "    PPI_count = 0\n",
+    "    PPF = {}\n",
+    "    values_by_sex = {}\n",
+    "    for key, val in ppi_dict.items():\n",
+    "        if isinstance(key, tuple):\n",
+    "            sex = key[-1]  # works for (date, sex) or (experiment, date, sex)\n",
+    "            if pd.notna(val):\n",
+    "                values_by_sex.setdefault(sex, []).append(val)\n",
+    "                if val < 0:\n",
+    "                    PPF_count += 1\n",
+    "                    PPF[key] = val\n",
+    "                else:\n",
+    "                    PPI_count += 1\n",
+    "    print(f\"PPI count: {PPI_count}\")\n",
+    "    # Average for each sex\n",
+    "    \n",
+    "    avg_by_sex = {sex: np.nanmean(vals) if vals else np.nan for sex, vals in values_by_sex.items()}\n",
+    "    for sex, avg in avg_by_sex.items():\n",
+    "        print(f\"{sex}: {avg:.2f}\" if pd.notna(avg) else f\"{sex}: NaN\")\n",
+    "    print(f\"mean: {np.mean(list(avg_by_sex.values())):.2f}\")\n",
+    "    print(f\"PPF count: {PPF_count}\")\n",
+    "    for k, v in PPF.items():\n",
+    "        #print(f\"{k}: {v:.2f}\")\n",
+    "        pass\n",
+    "    print(f\"PPF mean: {np.mean(list(PPF.values())):.2f}\" if PPF else \"PPF mean: NaN\")\n",
+    "    return None\n",
+    "\n",
+    "# Example usage:\n",
+    "\n",
+    "average_ppi_by_sex(ppi_offset, \"offset_PPI\")\n",
+    "average_ppi_by_sex(ppi_gap, \"gap_duration\")\n",
+    "average_ppi_by_sex(ppi_ttn, \"tone_in_noise\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "f416102d",
    "metadata": {},
    "outputs": [
@@ -410,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "fb6e85ba",
    "metadata": {},
    "outputs": [
@@ -420,8 +651,8 @@
      "text": [
       "\n",
       "Checking for trends in negative %PPI cases for gap_duration experiments:\n",
-      "Negative %PPI by date: {'May20': 5, 'April16': 3, 'June26': 1}\n",
-      "Negative %PPI by sex: {'female': 6, 'male': 3}\n"
+      "Negative %PPI by date: {'April16': 3, 'May20': 5, 'June26': 1}\n",
+      "Negative %PPI by sex: {'male': 3, 'female': 6}\n"
      ]
     }
    ],
@@ -453,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "id": "137e21d6",
    "metadata": {},
    "outputs": [
@@ -514,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "id": "0a7b91d4",
    "metadata": {},
    "outputs": [
@@ -597,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "id": "d172e2c2",
    "metadata": {},
    "outputs": [
@@ -619,7 +850,7 @@
        "0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "id": "cf69c34c",
    "metadata": {},
    "outputs": [
