--- a/[0] Butterer.ipynb
+++ b/[0] Butterer.ipynb
@@ -14,93 +14,93 @@
       "\n",
       "Processing 2025\\Animal10_April16.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal10_April16.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal10_April16_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal10_April16.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal10_April16_PSD.png\n",
       "\n",
       "Processing 2025\\Animal10_June26.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal10_June26.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal10_June26_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal10_June26.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal10_June26_PSD.png\n",
       "\n",
       "Processing 2025\\Animal10_May20.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal10_May20.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal10_May20_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal10_May20.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal10_May20_PSD.png\n",
       "\n",
       "Processing 2025\\Animal15_April16.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal15_April16.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal15_April16_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal15_April16.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal15_April16_PSD.png\n",
       "\n",
       "Processing 2025\\Animal15_June26.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal15_June26.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal15_June26_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal15_June26.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal15_June26_PSD.png\n",
       "\n",
       "Processing 2025\\Animal15_May20.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal15_May20.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal15_May20_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal15_May20.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal15_May20_PSD.png\n",
       "\n",
       "Processing 2025\\Animal1_April16.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal1_April16.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal1_April16_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal1_April16.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal1_April16_PSD.png\n",
       "\n",
       "Processing 2025\\Animal1_June26.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal1_June26.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal1_June26_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal1_June26.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal1_June26_PSD.png\n",
       "\n",
       "Processing 2025\\Animal1_May20.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal1_May20.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal1_May20_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal1_May20.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal1_May20_PSD.png\n",
       "\n",
       "Processing 2025\\Animal2_April16.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal2_April16.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal2_April16_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal2_April16.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal2_April16_PSD.png\n",
       "\n",
       "Processing 2025\\Animal2_June26.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal2_June26.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal2_June26_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal2_June26.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal2_June26_PSD.png\n",
       "\n",
       "Processing 2025\\Animal2_May20.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal2_May20.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal2_May20_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal2_May20.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal2_May20_PSD.png\n",
       "\n",
       "Processing 2025\\Animal4_April16.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal4_April16.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal4_April16_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal4_April16.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal4_April16_PSD.png\n",
       "\n",
       "Processing 2025\\Animal4_June26.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal4_June26.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal4_June26_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal4_June26.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal4_June26_PSD.png\n",
       "\n",
       "Processing 2025\\Animal4_May20.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal4_May20.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal4_May20_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal4_May20.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal4_May20_PSD.png\n",
       "\n",
       "Processing 2025\\Animal6_April16.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal6_April16.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal6_April16_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal6_April16.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal6_April16_PSD.png\n",
       "\n",
       "Processing 2025\\Animal6_June26.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal6_June26.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal6_June26_PSD.png\n",
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal6_June26.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal6_June26_PSD.png\n",
       "\n",
       "Processing 2025\\Animal6_May20.CSV ...\n",
       "  Sampling rate ≈ 500.00 Hz\n",
-      "  ✅ Saved filtered CSV: Peakfinder Input Buttered\\Animal6_May20.CSV\n",
-      "  ✅ Saved PSD plot: PSD_plots Buttered\\Animal6_May20_PSD.png\n"
+      "  ✅ Saved filtered CSV: Peakfinder Input\\Animal6_May20.CSV\n",
+      "  ✅ Saved PSD plot: PSD_plots\\Animal6_May20_PSD.png\n"
      ]
     }
    ],
@@ -114,8 +114,8 @@
     "\n",
     "# === Parameters ===\n",
     "input_folder = \"2025\"    # <-- change this\n",
-    "output_folder = \"Peakfinder Input Buttered\"\n",
-    "psd_folder = \"PSD_plots Buttered\"\n",
+    "output_folder = \"Peakfinder Input\"\n",
+    "psd_folder = \"[0] PSD_plots\"\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "os.makedirs(psd_folder, exist_ok=True)\n",
     "\n",
